--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      # 4️⃣ 上传后端文件到 Windows 服务器
+      # 4️⃣ 上传整个 Node 项目到 Windows 服务器
       - name: Upload Node backend to server
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -33,10 +33,13 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_PORT }}
-          source: "**/*"            # 上传整个项目
-          target: "C:/wwwroot/blog-server"
+          source: "./*"                     # ✅ 确保上传整个项目根目录，包括 package.json
+          target: "C:/wwwroot/blog-server"  # Windows 目标目录
+          debug: true                       # 打开 debug 看上传详情
+          strip_components: 0
+          overwrite: true                   # 覆盖旧文件
 
-      # 5️⃣ 重启 Node 服务（Windows CMD 兼容）
+      # 5️⃣ 重启 Node 服务（Windows CMD）
       - name: Restart Node service
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -45,6 +48,9 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_PORT }}
           script: |
+            echo "Stopping old Node processes..."
             taskkill /F /IM node.exe || echo "No previous node process"
+            
+            echo "Starting Node service..."
             cd C:\wwwroot\blog-server
             start cmd /c "node index.js"
