--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,18 +14,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ 安装 Node.js
+      # 2️⃣ 安装 Node.js（在 Actions 上执行 npm install）
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
 
-      # 3️⃣ 安装依赖
       - name: Install dependencies
         run: npm install
 
-      # 4️⃣ 上传后端文件到 Windows 服务器（robocopy）
+      # 3️⃣ 上传项目到 Windows 服务器
       - name: Upload Node backend to server
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -34,13 +33,10 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_PORT }}
           script: |
-            # 创建目标目录（如果不存在）
-            if not exist C:\wwwroot\blog-server mkdir C:\wwwroot\blog-server
-            
-            # 使用 robocopy 镜像上传目录（排除不需要的）
-            robocopy . C:\wwwroot\blog-server /MIR /R:3 /W:5 /XD node_modules .git .github .gitignore
+            cmd /c "if not exist C:\wwwroot\blog-server mkdir C:\wwwroot\blog-server"
+            cmd /c "robocopy . C:\wwwroot\blog-server /MIR /R:3 /W:5 /XD node_modules .git .github .gitignore"
 
-      # 5️⃣ 重启 Node 服务（Windows CMD）
+      # 4️⃣ 重启 Node 服务
       - name: Restart Node service
         uses: appleboy/ssh-action@v1.0.3
         with:
@@ -49,9 +45,5 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_PORT }}
           script: |
-            # 停掉旧 Node 进程
-            taskkill /F /IM node.exe || echo "No previous node process"
-            
-            # 启动 Node 服务
-            cd C:\wwwroot\blog-server
-            start cmd /c "node index.js"
+            cmd /c "taskkill /F /IM node.exe || echo No previous node process"
+            cmd /c "cd C:\wwwroot\blog-server && start cmd /c \"node index.js\""
