--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 2️⃣ 上传后端源代码到 Windows 服务器（不上传 node_modules）
+      # 2️⃣ 上传 Node 后端到 Windows 服务器
       - name: Upload Node backend to server
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -22,11 +22,11 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: ${{ secrets.SERVER_PORT }}
-          source:
-            - "index.js"
-            - "package.json"
-            - "**/*.js"
-          target: "C:/wwwroot/blog-server"
+          source: |
+            index.js
+            package.json
+            "**/*.js"
+          target: C:/wwwroot/blog-server
           timeout: 30s
           command_timeout: 10m
 
@@ -41,9 +41,9 @@ jobs:
           script: |
             if not exist C:\wwwroot\blog-server mkdir C:\wwwroot\blog-server
             cd C:\wwwroot\blog-server
-            echo "Installing dependencies..."
+            echo Installing dependencies...
             npm install
-            echo "Stopping old Node process..."
-            taskkill /F /IM node.exe || echo "No previous node process"
-            echo "Starting Node service..."
+            echo Stopping old Node process...
+            taskkill /F /IM node.exe || echo No previous node process
+            echo Starting Node service...
             start cmd /c "node index.js"
